--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <h2>A new game is available.</h2>
+<iframe height="167" frameborder="0" src="https://itch.io/embed/3719959" width="552"><a href="https://alexcreation2009.itch.io/dodge-the-creeps">Dodge the Creeps by CreationGames</a></iframe>
